@@ -36,7 +36,7 @@
             <artifactId>pyx-security-server</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
@@ -101,6 +101,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <forkMode>once</forkMode>
+                    <!-- parallel>off</parallel -->
+                    <!--argLine>-Djava.awt.headless=true -XX:MaxPermSize=64m -Xms64m -Xmx128m -agentpath:D:\prog\dev\YourKit\bin\win64\yjpagent.dll=disablestacktelemetry,disableexceptiontelemetry,builtinprobes=none,delay=10000</argLine-->
                 </configuration>
             </plugin>
 
